# Columbia_Capstone-KPMG

./: .gitignore  CLAUDE.md  EnvironmentSetup_instruction.md  INSTALLATION.md  Introduction.md  LICENSE  README.md  pyproject.toml  requirements.txt  result_pd.csv  test_acronym_detection.py
configs/: api_config.yaml  ingest_parse.yaml  system_prompt.txt
data/evaluation_results/: batch_evaluation_results.csv  exp_001_fix_size_k5_noRerank_gpt-5_evaluation.json  exp_001_fix_size_k5_rerank_a0.5_gpt-5_evaluation.json  exp_001_semantic_k5_gpt-5_evaluation.json  exp_001_semantic_k5_noRerank_gpt-5_evaluation.json  exp_001_semantic_k5_rerank_a0.5_gpt-5_evaluation.json  exp_002_fix_size_k5_gpt-5_evaluation.json  exp_002_fix_size_k5_rerank_a0.5_gpt-5_evaluation.json  exp_002_semantic_k5_rerank_a0.3_gpt-5_evaluation.json  exp_002_semantic_k5_rerank_a0.5_gpt-5_evaluation.json  exp_002_semantic_k5_rerank_a0.7_gpt-5_evaluation.json  exp_003_asterisk_k5_rerank_a0.5_gpt-5_evaluation.json  exp_003_fix_size_k5_rerank_a0.5_gpt-5_evaluation.json  exp_003_semantic_k5_noRerank_gpt-5_evaluation.json  exp_003_semantic_k5_rerank_a0.5_gpt-5_evaluation.json  exp_004_fix_size_k5_rerank_a0.5_gpt-5_evaluation.json  exp_004_fix_size_k5_rerank_a0.7_gpt-5_evaluation.json  exp_004_semantic_k5_rerank_a0.5_gpt-5_evaluation.json  exp_004_semantic_k5_rerank_a0.7_gpt-5_evaluation.json  exp_005_asterisk_k5_rerank_a0.5_gpt-5_evaluation.json  exp_005_fix_size_k5_noRerank_gpt-5_evaluation.json  exp_005_fix_size_k5_rerank_a0.5_gpt-5_evaluation.json  exp_005_semantic_k5_noRerank_gpt-5_evaluation.json  exp_006_fix_size_k5_rerank_a0.5_gpt-5_evaluation.json  exp_006_fix_size_k5_rerank_a0.7_gpt-5_evaluation.json  exp_006_semantic_k5_rerank_a0.3_gpt-5_evaluation.json  exp_007_asterisk_k5_rerank_a0.5_gpt-5_evaluation.json  exp_007_fix_size_k5_noRerank_gpt-5_evaluation.json  exp_007_semantic_k5_rerank_a0.5_gpt-5_evaluation.json  exp_008_asterisk_k5_rerank_a0.7_gpt-5_evaluation.json  exp_008_fix_size_k5_rerank_a0.5_gpt-5_evaluation.json  (+16 more)
data/llm_eval_results/: exp_001_llm_eval.json  (+20 more)
docker/: .env.example  docker-compose.yml
docs/: 2023-09-05_bill_req_update_child_CFTSS.json  2023-09-05_bill_req_update_child_CFTSS.txt  EVALUATE_PIPELINE_LLM_INTEGRATION.md  How to set up testing querys.md  LLM_EVALUATION_USAGE.md  mu_no01_jan21_pr.json  mu_no01_jan21_pr.txt  service_delivery_designation_guidance_cftss_hcbs.json  service_delivery_designation_guidance_cftss_hcbs.txt
frontend/: README.md  app.py
scripts/: do_asterisk_chunking.py  do_fix_size_chunking.py  do_semantic_chunking.py  doc_converter.py  evaluate.py  ingest_graph.py  ingestion_parse.py  llm_evaluation.py  llm_query.py  prepare_metadata.py  rebuild_db.py  reset_graph.py  test_filter_extractor.py  test_neo4j.py  testing.py
src/: fix-size-chunking.py
(+588 files in other folders)
