[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare_rag_llm"
version = "0.1.0"
description = "Healthcare policy analysis with LLM and RAG"
requires-python = ">=3.9"
dependencies = [
  "PyYAML",
  "tqdm",
  "pdfminer.six",
  "python-docx",
  "pytesseract",
  "pdf2image",
  "Pillow",
  "pdfplumber",
  "accelerate",
  "torch==2.2.2",
  "numpy==1.26.4",
  "transformers==4.40.2",
  "sentence-transformers==2.7.0",
  "peft==0.10.0",
  "FlagEmbedding",
  "nltk",
  "neo4j>=5.17.0",
  "pandas>=2.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
doc_2_docx = [
  "pywin32>=306; sys_platform == 'win32'"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
