[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare_rag_llm"
version = "0.2.0"
description = "Healthcare policy analysis with LLM and RAG"
requires-python = ">=3.9,<3.13"  # Python 3.13 not yet fully supported by PyTorch
dependencies = [
  "PyYAML",
  "tqdm",
  "pdfminer.six",
  "python-docx",
  "pytesseract",
  "pdf2image",
  "Pillow",
  "pdfplumber",
  "accelerate",
  # Note: PyTorch should be installed separately to choose GPU/CPU version
  # GPU (recommended): pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
  # CPU only: pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
  # See INSTALLATION.md for details
  "torch>=2.2.0,<3.0.0",  # Support PyTorch 2.2.x - 2.x.x
  "numpy>=1.24.0,<2.0.0",
  "transformers>=4.35.0,<5.0.0",
  "sentence-transformers>=2.5.0,<3.0.0",
  "peft>=0.10.0,<1.0.0",
  "FlagEmbedding",
  "nltk",
  "neo4j>=5.17.0",
  "pandas>=2.0",
  "python-dotenv>=1.0.0",
  "openai>=1.0.0",
  "google-generativeai>=0.3.0",
  "streamlit"
]

[project.optional-dependencies]
doc_2_docx = [
  "pywin32>=306; sys_platform == 'win32'"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
